content/terraform-plugin-testing/v1.6.x/docs/plugin/testing/acceptance-tests/plan-checks/resource.mdx
---
page_title: 'Plugin Development - Acceptance Testing: Plan Checks'
description: >-
  Plan Checks are test assertions that can inspect a plan at different phases in a TestStep. The testing module
  provides built-in Managed Resource and Data Source Plan Checks for common use-cases.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-03-06T10:49:53-05:00
last_modified: 2025-03-06T10:49:53-05:00
# END AUTO GENERATED METADATA
---

# Resource Plan Checks

The `terraform-plugin-testing` module provides a package [`plancheck`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/plancheck) with built-in managed resource, and data source plan checks for common use-cases:

| Check                                                                                                                                                   | Description                                                                          |
|---------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------|
| [`plancheck.ExpectResourceAction(address, operation)`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/plancheck#ExpectResourceAction) | Asserts the given managed resource, or data source, has the specified operation for apply.            |
| [`plancheck.ExpectUnknownValue(address, path)`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/plancheck#ExpectUnknownValue)          | Asserts the specified attribute at the given managed resource, or data source, has an unknown value.  |
| [`plancheck.ExpectSensitiveValue(address, path)`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/plancheck#ExpectSensitiveValue)      | Asserts the specified attribute at the given managed resource, or data source, has a sensitive value. |

## Examples using `plancheck.ExpectResourceAction`

One of the built-in plan checks, [`plancheck.ExpectResourceAction`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/plancheck#ExpectResourceAction), is useful for determining the exact action type a resource will under-go during, say, the `terraform apply` phase.

Given the following example with the [random provider](https://registry.terraform.io/providers/hashicorp/random/latest/docs/resources/string), we have written a test that asserts that `random_string.one` will be destroyed and re-created when the `length` attribute is changed:

```go
package example_test

import (
	"testing"

	"github.com/hashicorp/terraform-plugin-testing/helper/resource"
	"github.com/hashicorp/terraform-plugin-testing/plancheck"
)

func Test_Random_ForcesRecreate(t *testing.T) {
	t.Parallel()

	resource.Test(t, resource.TestCase{
		ExternalProviders: map[string]resource.ExternalProvider{
			"random": {
				Source: "registry.terraform.io/hashicorp/random",
			},
		},
		Steps: []resource.TestStep{
			{
				Config: `resource "random_string" "one" {
					length = 16
				}`,
			},
			{
				Config: `resource "random_string" "one" {
					length = 15
				}`,
				ConfigPlanChecks: resource.ConfigPlanChecks{
					PreApply: []plancheck.PlanCheck{
						plancheck.ExpectResourceAction("random_string.one", plancheck.ResourceActionDestroyBeforeCreate),
					},
				},
			},
		},
	})
}
```

Another example with the [time provider](https://registry.terraform.io/providers/hashicorp/time/latest/docs/resources/offset) asserts that `time_offset.one` will be updated in-place when the `offset_days` attribute is changed:

```go
package example_test

import (
	"testing"

	"github.com/hashicorp/terraform-plugin-testing/helper/resource"
	"github.com/hashicorp/terraform-plugin-testing/plancheck"
)

func Test_Time_UpdateInPlace(t *testing.T) {
	t.Parallel()

	resource.Test(t, resource.TestCase{
		ExternalProviders: map[string]resource.ExternalProvider{
			"time": {
				Source: "registry.terraform.io/hashicorp/time",
			},
		},
		Steps: []resource.TestStep{
			{
				Config: `resource "time_offset" "one" {
					offset_days = 1
				  }`,
			},
			{
				Config: `resource "time_offset" "one" {
					offset_days = 2
				  }`,
				ConfigPlanChecks: resource.ConfigPlanChecks{
					PreApply: []plancheck.PlanCheck{
						plancheck.ExpectResourceAction("time_offset.one", plancheck.ResourceActionUpdate),
					},
				},
			},
		},
	})
}
```

Multiple plan checks can be combined if you want to assert multiple resource actions:
```go
package example_test

import (
	"testing"

	"github.com/hashicorp/terraform-plugin-testing/helper/resource"
	"github.com/hashicorp/terraform-plugin-testing/plancheck"
)

func Test_Time_UpdateInPlace_and_NoOp(t *testing.T) {
	t.Parallel()

	resource.Test(t, resource.TestCase{
		ExternalProviders: map[string]resource.ExternalProvider{
			"time": {
				Source: "registry.terraform.io/hashicorp/time",
			},
		},
		Steps: []resource.TestStep{
			{
				Config: `resource "time_offset" "one" {
					offset_days = 1
				  }
				  resource "time_offset" "two" {
					offset_days = 1
				  }`,
			},
			{
				Config: `resource "time_offset" "one" {
					offset_days = 2
				  }
				  resource "time_offset" "two" {
					offset_days = 1
				  }`,
				ConfigPlanChecks: resource.ConfigPlanChecks{
					PreApply: []plancheck.PlanCheck{
						plancheck.ExpectResourceAction("time_offset.one", plancheck.ResourceActionUpdate),
						plancheck.ExpectResourceAction("time_offset.two", plancheck.ResourceActionNoop),
					},
				},
			},
		},
	})
}
```
